--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <h1>PostureFAAAH</h1>
   <p>Runs entirely in your browser. Camera + local ML. Plays a sound when you slouch.</p>
+  <p id="status"></p>
 
   <div id="videoWrap">
     <video id="video" autoplay playsinline muted></video>
