--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     Sorry, your browser does not support the audio element.
   </audio>
 
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.20.0/dist/tf.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/face-landmarks-detection@1.0.2/dist/face-landmarks-detection.min.js"></script>
   <script type="module" src="script.js"></script>
 </body>
 </html>
