--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>PostureFAAAH</h1>
-  <p>Local posture monitoring with MediaPipe. Runs entirely in your browser. Plays a sound when you slouch. Works in the background.</p>
-  <p id="status"></p>
+  <h1>Posture // Faaah</h1>
+  <p>Local posture monitoring system. Precision feedback. Secure execution.</p>
+  <p id="status">System Idle</p>
 
   <div id="videoWrap">
     <video id="video" autoplay playsinline muted></video>
@@ -18,10 +18,10 @@
   </div>
 
   <div id="controls">
-    <button id="startBtn">Start</button>
-    <button id="stopBtn" disabled>Stop</button>
-    <label>Sensitivity <input id="sensitivity" type="range" min="1" max="100" value="40"></label>
-    <label><input id="debug" type="checkbox"> Debug overlay</label>
+    <button id="startBtn">INITIATE</button>
+    <button id="stopBtn" disabled>TERMINATE</button>
+    <label>SENSITIVITY <input id="sensitivity" type="range" min="1" max="100" value="40"></label>
+    <label><input id="debug" type="checkbox"> DEBUG OVERLAY</label>
   </div>
 
   <audio id="alertSound" preload="auto">
