--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Posture // Faaah</h1>
-  <p>Local posture monitoring system. Precision feedback. Secure execution.</p>
+  <h1>Posture Faaah</h1>
+  <p>Yeah, it's that dumb. Sit up straight or hear a loud faah.</p>
   <p id="status">System Idle</p>
 
   <div id="videoWrap">
@@ -18,9 +18,8 @@
   </div>
 
   <div id="controls">
-    <button id="startBtn">INITIATE</button>
-    <button id="stopBtn" disabled>TERMINATE</button>
-    <label>SENSITIVITY <input id="sensitivity" type="range" min="1" max="100" value="40"></label>
+    <button id="startBtn">START</button>
+    <button id="stopBtn" disabled>STOP</button>
     <label><input id="debug" type="checkbox"> DEBUG OVERLAY</label>
   </div>
 
